// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DraftOrderTable/> render() should render 1`] = `
<Table
  className="table"
  hover={true}
  responsiveTag="div"
  tag="table"
>
  <thead>
    <tr>
      <th>
        Product
      </th>
      <th>
        In stock
      </th>
      <th>
        Item price
      </th>
      <th>
        Qty
      </th>
      <th>
        Item total
      </th>
    </tr>
  </thead>
  <tbody>
    <DraftOrderLineItemRow
      actionName="shopifyDuplicateOrder"
      currencyCode="USD"
      id="4f93eb74e9ec2d79401da8b7a8fce088108a01fb"
      isShownInEditOrder={false}
      key="4f93eb74e9ec2d79401da8b7a8fce088108a01fb"
      lineItem={
        Immutable.Map {
          "applied_discount": null,
          "taxable": true,
          "price": "1.00",
          "quantity": 1,
          "product_id": 1,
          "product_exists": true,
          "properties": Immutable.List [],
          "variant_id": 31128766316567,
          "title": "Acidulous candy",
          "sku": "0987654321-1",
          "variant_title": "Red / A",
          "requires_shipping": true,
        }
      }
      onChange={[Function]}
      onDelete={[Function]}
      product={
        Immutable.Map {
          "id": 1,
          "title": "Product 1",
          "options": Immutable.List [],
          "created_at": "2020-01-01 00:00:00.000000",
          "image": Immutable.Map {
            "id": 1,
            "alt": "Alt",
            "src": "src",
          },
          "images": Immutable.List [
            Immutable.Map {
              "id": 1,
              "alt": "Alt",
              "src": "src",
            },
          ],
          "variants": Immutable.List [
            Immutable.Map {
              "taxable": true,
              "admin_graphql_api_id": "gid://shopify/ProductVariant/1",
              "inventory_management": null,
              "price": "9.99",
              "inventory_quantity": 0,
              "title": "Variant 1",
              "id": 1,
              "option1": null,
              "sku": "11111",
              "option2": null,
              "option3": null,
              "image_id": 1,
              "requires_shipping": true,
            },
          ],
        }
      }
      removable={true}
      shopName="storegorgias3"
    />
    <DraftOrderLineItemRow
      actionName="shopifyDuplicateOrder"
      currencyCode="USD"
      id="b391dcbebcc4eac57e66e9b2fec677c45018e15d"
      isShownInEditOrder={false}
      key="b391dcbebcc4eac57e66e9b2fec677c45018e15d"
      lineItem={
        Immutable.Map {
          "applied_discount": null,
          "taxable": true,
          "price": "1.00",
          "quantity": 4,
          "product_id": 2,
          "product_exists": true,
          "properties": Immutable.List [],
          "variant_id": 31128766349335,
          "title": "Acidulous candy",
          "sku": "0987654321-2",
          "variant_title": "Red / B",
          "requires_shipping": true,
        }
      }
      onChange={[Function]}
      onDelete={[Function]}
      product={
        Immutable.Map {
          "id": 2,
          "title": "Product 2",
          "options": Immutable.List [],
          "created_at": "2020-01-01 00:00:00.000000",
          "image": Immutable.Map {
            "id": 1,
            "alt": "Alt",
            "src": "src",
          },
          "images": Immutable.List [
            Immutable.Map {
              "id": 1,
              "alt": "Alt",
              "src": "src",
            },
          ],
          "variants": Immutable.List [
            Immutable.Map {
              "taxable": true,
              "admin_graphql_api_id": "gid://shopify/ProductVariant/1",
              "inventory_management": null,
              "price": "9.99",
              "inventory_quantity": 0,
              "title": "Variant 1",
              "id": 1,
              "option1": null,
              "sku": "11111",
              "option2": null,
              "option3": null,
              "image_id": 1,
              "requires_shipping": true,
            },
          ],
        }
      }
      removable={true}
      shopName="storegorgias3"
    />
  </tbody>
</Table>
`;

exports[`<DraftOrderTable/> render() should render without line items 1`] = `
<Table
  className="table"
  hover={false}
  responsiveTag="div"
  tag="table"
>
  <thead>
    <tr>
      <th>
        Product
      </th>
      <th>
        In stock
      </th>
      <th>
        Item price
      </th>
      <th>
        Qty
      </th>
      <th>
        Item total
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        className="text-center text-muted"
        colSpan={4}
      >
        <small>
          No items
        </small>
      </td>
    </tr>
  </tbody>
</Table>
`;

exports[`<DraftOrderTable/> render() should render without products 1`] = `
<Table
  className="table"
  hover={true}
  responsiveTag="div"
  tag="table"
>
  <thead>
    <tr>
      <th>
        Product
      </th>
      <th>
        In stock
      </th>
      <th>
        Item price
      </th>
      <th>
        Qty
      </th>
      <th>
        Item total
      </th>
    </tr>
  </thead>
  <tbody>
    <DraftOrderLineItemRow
      actionName="shopifyDuplicateOrder"
      currencyCode="USD"
      id="4f93eb74e9ec2d79401da8b7a8fce088108a01fb"
      isShownInEditOrder={false}
      key="4f93eb74e9ec2d79401da8b7a8fce088108a01fb"
      lineItem={
        Immutable.Map {
          "applied_discount": null,
          "taxable": true,
          "price": "1.00",
          "quantity": 1,
          "product_id": 1,
          "product_exists": true,
          "properties": Immutable.List [],
          "variant_id": 31128766316567,
          "title": "Acidulous candy",
          "sku": "0987654321-1",
          "variant_title": "Red / A",
          "requires_shipping": true,
        }
      }
      onChange={[Function]}
      onDelete={[Function]}
      removable={true}
      shopName="storegorgias3"
    />
    <DraftOrderLineItemRow
      actionName="shopifyDuplicateOrder"
      currencyCode="USD"
      id="b391dcbebcc4eac57e66e9b2fec677c45018e15d"
      isShownInEditOrder={false}
      key="b391dcbebcc4eac57e66e9b2fec677c45018e15d"
      lineItem={
        Immutable.Map {
          "applied_discount": null,
          "taxable": true,
          "price": "1.00",
          "quantity": 4,
          "product_id": 2,
          "product_exists": true,
          "properties": Immutable.List [],
          "variant_id": 31128766349335,
          "title": "Acidulous candy",
          "sku": "0987654321-2",
          "variant_title": "Red / B",
          "requires_shipping": true,
        }
      }
      onChange={[Function]}
      onDelete={[Function]}
      removable={true}
      shopName="storegorgias3"
    />
  </tbody>
</Table>
`;
